tests/whole_screen/snapshots/whole_screen__an_answer_reaches_the_screen_with_its_markers_read_rather_than_drawn.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x32 cursor 29,4 scrolled 0
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› say something in markdown                                                    ┃|
|                                                                               ┃|
|What I found                                                                   ┃|
|                                                                               ┃|
|The loud part, a span of code and a page beside them.                          ┃|
|                                                                               ┃|
|• one                                                                          ┃|
|• two                                                                          ┃|
|                                                                               ┃|
|│ and a line somebody else said                                                ┃|
|                                                                               ┃|
|what │ how                                                                     ┃|
|─────┼──────                                                                   ┃|
|one  │ first                                                                   ┃|
|two  │ after                                                                   ┃|
|                                                                               ┃|
|fn main() {}                                                                   ┃|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
