tests/whole_screen/snapshots/whole_screen__an_environment_authenticated_session_never_claims_logout_removed_it.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,4 scrolled 0
|│ Recent sessions                                                             ││|
|│                                                                             ││|
|│ No earlier session for this workspace                                       ││|
|│                                                                             │┃|
|│ ─────────────────────────────────────────────────────────────────────────── │┃|
|│                                                                             │┃|
|│ Tips                                                                        │┃|
|│                                                                             │┃|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› /logout                                                                      ●|
|⎿ anthropic still uses ANTHROPIC_API_KEY; unset it in the shell before         ┃|
|  restarting                                                                   ┃|
|                                                                               ┃|
|                                                                                |
|                                                                100% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
