tests/whole_screen/snapshots/whole_screen__choosing_notes_makes_room_and_says_what_it_took.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 20,4 scrolled 0
|                                                                                |
|› the first thing                                                               |
|                                                                                |
|Notes on the first thing.                                                       |
|                                                                                |
|› the second thing                                                              |
|                                                                                |
|Notes on the second thing.                                                      |
|                                                                                |
|› the third thing                                                               |
|                                                                                |
|Notes on the third thing.                                                       |
|                                                                                |
|────────────────────────────────────────────────────────────────────────────────|
| compacted · you chose notes over carrying this session whole                   |
| 4 messages became a recap · 6k → 6k carried · 2 turns kept whole               |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
|                                                               transcript map → |
