tests/whole_screen/snapshots/whole_screen__compact_tool_group_expanded.snap
---
source: tests/whole_screen/main.rs
expression: opened
---
80x32 cursor 31,0 scrolled 0
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› inspect and write                                                            ┃|
|                                                                               ┃|
|● Read 2 files                                                                 ┃|
|                                                                               ┃|
|● Bash(cat > generated.txt <<'EOF' long script line long…)                     ┃|
|  ⎿ (no output) (ctrl+o to expand)                                             ┃|
|                                                                               ┃|
|● Read(missing.txt)                                                            ┃|
|  ⎿ ✗ missing.txt does not exist                                               ┃|
|                                                                               ┃|
|Inspection finished.                                                           ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Read(two.txt)                                                                   |
|                                                                                |
|     1 second retained result                                                   |
|                                                                                |
|Read(one.txt)                                                                   |
|                                                                                |
|     1 first retained result                                                    |
|                                                                                |
|esc to close                                                                    |
