tests/whole_screen/snapshots/whole_screen__context_mid_turn_80.snap
---
source: tests/whole_screen/main.rs
expression: on_the_first_beat(&picture)
---
80x24 cursor 23,0 scrolled 0
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|› start it                                                                     │|
|                                                                               │|
|● Bash(sleep 30)                                                               ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              ●|
|                                                                               ┃|
|It is started. That is all.                                                    ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Context · claude-test-1 · 200k window                                           |
|                                                                                |
|██████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░|
|                                                                                |
|  ██ system prompt           1.0k     0.5%                                      |
|  ██ project instructions       0       0%                                      |
|  ██ tool schemas            3.8k     1.9%                                      |
|  ██ MCP tool schemas           0       0%                                      |
|  ██ messages                 482     0.2%                                      |
|  ██ reserve                28.1k    14.1%                                      |
|  ░░ free                  166.4k      99%                                      |
|                                                                                |
|esc to close                                                                    |
