tests/whole_screen/snapshots/whole_screen__ctrl_a_shows_every_project_and_says_where_each_session_is.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1881
expression: window.picture()
---
80x24 cursor 1,10 scrolled 0
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search    a session, or a branch                                             │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
| Resume a session · 4 of 4 · all projects                                       |
|                                                                                |
|╭──────────────────────────────╮ ╭─────────────────────────────────────────────╮|
|│ › fix the failing parser tes │ │ › fix the failing parser test               │|
|│   just now · main            │ │                                             │|
|│                              │ │                                             │|
|│   draft the parser rewrite   │ │                                             │|
|│   just now · feature         │ │                                             │|
|│                              │ │                                             │|
|│   cut the release notes      │ │                                             │|
|│   just now · release · ~/a-d │ │                                             │|
|│                              │ │                                             │|
|│   tidy the stylesheet        │ │                                             │|
|│   just now · main · ~/projec │ │                                             │|
|│                              │ │ ────────────────────────────────────────────│|
|│                              │ │ just now · 1 message · main                 │|
|│                              │ │ Enter to resume · Esc to cancel             │|
|╰──────────────────────────────╯ ╰─────────────────────────────────────────────╯|
|                                                                                |
| ↑↓ · enter · ctrl+r · ctrl+a · ctrl+b · ctrl+w · esc                           |
|                                                                                |
